# rust-frontend

./: .editorconfig  .gitignore  Cargo.toml  README.md  Trunk.toml  package.json  tailwind.config.js
src/: Cargo.toml  index.html  manifest.json
src/app/: layout.rs  lib.rs  main.rs  router.rs
src/app/components/: mod.rs  nav.rs
src/app/routes/: home.rs  mod.rs
ssr/: main.rs
