[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend"
path = "ssr/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web = { path = "src" }
yew = { version = "^0.21", features = ["ssr"] }
tokio = { version = "^1.36", features = ["full"] }
actix-web = "^4"
actix-files = "^0.6"
actix-web-lab = "^0.20"
serde = { version = "^1", features = ["derive"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
color-eyre = "^0.6"
futures = "0.3.30"

[target.'cfg(unix)'.dependencies]
jemallocator = "0.5"

[profile.dev.package.backtrace]
opt-level = 3
