# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "web"
path = "app/main.rs"

[lib]
path = "app/lib.rs"

[dependencies]
yew = { version = "^0.21", features = ["csr", "hydration"] }
wasm-logger = "^0.2"
yew-router = { version = "0.18.0" }
